--- a/.github/workflows/main_strategies-portfolio-backend.yml
+++ b/.github/workflows/main_strategies-portfolio-backend.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP app to Azure Web App - strategies-portfolio-backend
+name: Build and deploy ASP.NET Core app to Azure Web App - strategies-portfolio-backend
 
 on:
   push:
@@ -16,23 +16,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup MSBuild path
-        uses: microsoft/setup-msbuild@v1.0.2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.x'
 
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.0.5
+      - name: Restore dependencies
+        run: dotnet restore
 
-      - name: Restore NuGet packages
-        run: nuget restore
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
 
       - name: Publish to folder
-        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
+        run: dotnet publish --configuration Release --output ${{ github.workspace }}/published
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: ASP-app
-          path: '/published/**'
+          path: ${{ github.workspace }}/published
 
   deploy:
     runs-on: windows-latest
@@ -40,18 +42,18 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: ASP-app
-      
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'strategies-portfolio-backend'
           slot-name: 'Production'
-          package: .
+          package: ./published
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_82F1897D7C274D7BB0B84517C1A071F5 }}
