--- a/.github/workflows/main_strategies-portfolio.yml
+++ b/.github/workflows/main_strategies-portfolio.yml
@@ -22,16 +22,16 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build Strategies.Server/Strategies.Server.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish Strategies.Server/Strategies.Server.csproj -c Release -o ${{github.workspace}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: dotnet-app
+          path: ${{github.workspace}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -44,7 +44,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: dotnet-app
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -52,5 +52,5 @@ jobs:
         with:
           app-name: 'strategies-portfolio'
           slot-name: 'Production'
-          package: .
+          package: ./myapp
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D9D5E297CE1A4E61B7899B532E4FE274 }}
